  * Disabled tests, as they download from github.
  * Replaced git-core transition package by git in build-depends.
  * Added rsync as build-depends-indep.
  * Fix DESTDIR=$(DEB_DESTDIR) PREFIX=/usr as upstream Makefile changed.
  * Added python-all and dh-python as build-depends.
  * Update of debian/copyright for the new deps/* path from upstream, updated
    debian/* info and fixed order.

  [ Ondřej Nový ]
  * Fixed VCS URLs (https).
  * Fixed python shebang.
  * Standards-Version is 3.9.8 now (no change).

 -- Thomas Goirand <zigo@debian.org>  Sun, 14 Feb 2016 13:35:22 +0800

rabbitmq-server (3.5.7-1) unstable; urgency=medium

  * New upstream release.

 -- James Page <james.page@ubuntu.com>  Mon, 18 Jan 2016 14:05:40 +0000

rabbitmq-server (3.5.4-3.1) unstable; urgency=medium

  * Non-maintainer upload.
  * Make the default configuration file, which is read unconditionally on
    startup, readable by others. This makes it possible to run rabbitmq-server
    as users other than rabbitmq, e.g. when running test suites as part of
    package builds (Closes: #801917)

 -- Antonio Terceiro <terceiro@debian.org>  Sat, 31 Oct 2015 12:56:15 -0200

rabbitmq-server (3.5.4-3) unstable; urgency=medium

  * Fix /etc/rabbitmq creation (adding -p to mkdir for upgrades). Thanks to
    Frederic Peters for the bug report (Closes: #801088).

 -- Thomas Goirand <zigo@debian.org>  Tue, 06 Oct 2015 14:07:39 +0000

rabbitmq-server (3.5.4-2) unstable; urgency=medium

  * Cosmetic clean-up in debian/rabbitmq-server.postinst and .init.
  * Fix the user / group of /etc/rabbitmq folder and conf files.
  * Also fix user / group of an eventual /etc/rabbitmq/enabled_plugins when
    upgrading the package.

 -- Thomas Goirand <zigo@debian.org>  Mon, 05 Oct 2015 15:47:58 +0200

rabbitmq-server (3.5.4-1) unstable; urgency=medium

  * New upstream release.

 -- James Page <james.page@ubuntu.com>  Tue, 04 Aug 2015 14:52:31 +0200

rabbitmq-server (3.5.1-2) unstable; urgency=medium
