@@ -1,20 +1,35 @@
 #!/usr/bin/make -f
 # -*- makefile -*-
-#export DH_VERBOSE=1
+
+DEB_DESTDIR=debian/rabbitmq-server
+VERSION = $(shell dpkg-parsechangelog | awk '/^Version:/ {version=$$0; sub(/Version: /, "", version); sub(/-.*/, "", version); print version;}')
 
 %:
 	dh $@ --parallel --with python2,systemd
 
 DEB_UPSTREAM_VERSION=$(shell dpkg-parsechangelog | sed -rne 's,^Version: ([^+]+)-.*,\1,p')
-DEB_DESTDIR=debian/rabbitmq-server
 RABBIT_LIB=$(DEB_DESTDIR)/usr/lib/rabbitmq/lib/rabbitmq_server-$(DEB_UPSTREAM_VERSION)
 RABBIT_BIN=$(DEB_DESTDIR)/usr/lib/rabbitmq/bin
 DOCDIR=$(DEB_DESTDIR)/usr/share/doc/rabbitmq-server
 
+override_dh_auto_install: PREFIX = /usr
+override_dh_auto_install: RMQ_ROOTDIR = $(PREFIX)/lib/rabbitmq
+override_dh_auto_install: RMQ_ERLAPP_DIR = $(RMQ_ROOTDIR)/lib/rabbitmq_server-$(VERSION)
 override_dh_auto_install:
 	dh_auto_install -- DESTDIR=$(DEB_DESTDIR) PREFIX=/usr TARGET_DIR=$(RABBIT_LIB) SBIN_DIR=$(RABBIT_BIN) \
 		DOC_INSTALL_DIR=$(DOCDIR) MAN_DIR=$(DEB_DESTDIR)/usr/share/man
+
+	$(MAKE) install-bin DESTDIR=$(DEB_DESTDIR)
+
 	rm -f $(RABBIT_LIB)/LICENSE* $(RABBIT_LIB)/INSTALL*
+
+	install -p -D -m 0755 scripts/rabbitmq-server.ocf \
+		$(DEB_DESTDIR)$(PREFIX)/lib/ocf/resource.d/rabbitmq/rabbitmq-server
+	install -p -D -m 0755 scripts/rabbitmq-server-ha.ocf \
+		$(DEB_DESTDIR)$(PREFIX)/lib/ocf/resource.d/rabbitmq/rabbitmq-server-ha
+
+	rmdir $(DEB_DESTDIR)$(PREFIX)/lib/erlang/lib \
+		$(DEB_DESTDIR)$(PREFIX)/lib/erlang
 
 override_dh_auto_clean:
 	rm -f plugins-src/rabbitmq-server plugins/README
