@@ -16,6 +16,7 @@ rabbitmq-server (3.6.0-1) UNRELEASED; urgency=medium
   * Added python-all and dh-python as build-depends.
   * Update of debian/copyright for the new deps/* path from upstream, updated
     debian/* info and fixed order.
+  * Copy some stuff from the upstream pacakging in debian/rules.
 
   [ Ondřej Nový ]
   * Fixed VCS URLs (https).
